--- a/CourierManagementSystem.API/appsettings.json
+++ b/CourierManagementSystem.API/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CourierManagementDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Key": "YourSecretKeyHere1234567890",
+    "Issuer": "CourierApp",
+    "Audience": "CourierAppUser"
   }
+
 
 }
