--- a/CourierManagementSystem.API/appsettings.json
+++ b/CourierManagementSystem.API/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CourierManagementDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
-    "Key": "YourSecretKeyHere1234567890",
+    "Key": "thisIsASuperLongJwtSecretKey123456!",
     "Issuer": "CourierApp",
     "Audience": "CourierAppUser"
   }
